# fastapi-poetry-docker

./: .env.dev  .gitignore  LICENSE.txt  README.md  dip.yml  docker-compose.dev.yml  pyproject.toml
.devcontainer/: devcontainer.json
.docker/dev/: aptfile  docker-entrypoint.sh  dockerfile  setup-venv-entrypoint.sh
.github/workflows/: tests.yml
app/: main.py
tests/: main_test.py
