[tool.poetry]
name = "fastapi-poetry"
version = "0.1.0"
description = ""
authors = ["ghayn <ghayn@outlook.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.scripts]
dev = "app.main:start"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
uvicorn = {extras = ["standard"], version = "^0.22.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
